--- a/workflow.yml
+++ b/workflow.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Generate README.md
       uses: teoxoy/profile-readme-stats@v1
       with:
-        token: ${{ secrets.USER_TOKEN }}
+        token: ${{ secrets.Readme }}
     - name: Update README.md
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
