--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Generate README.md
       uses: teoxoy/profile-readme-stats@v1
       with:
-        token: ${{ secrets.README }}
+        token: ${{ README.README }}
     - name: Update README.md
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
