--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Update README.md
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+        git config user.name "Linus Torvalds"
+        git config user.email torvalds@linux-foundation.org
         git add .
         git commit -m "Update README"
         git push
