--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,27 +1,27 @@
-on:
-  schedule:
-    - cron: '0 */6 * * *'
-  push:
-    branches:
-      - master
-      - main
-jobs:
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Generate README.md
-      uses: teoxoy/profile-readme-stats@v1
-      with:
-        token: ${{ secrets.GH_STATS }}
-    - name: Update README.md
-      run: |
-        if [[ "$(git status --porcelain)" != "" ]]; then
-        git config user.name "Linus Torvalds"
-        git config user.email torvalds@linux-foundation.org
-        git add .
-        git commit -m "Update README"
-        git push
-        fi
+# on:
+#   schedule:
+#     - cron: '0 */6 * * *'
+#   push:
+#     branches:
+#       - master
+#       - main
+# jobs:
+#   publish:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#       with:
+#         fetch-depth: 0
+#     - name: Generate README.md
+#       uses: teoxoy/profile-readme-stats@v1
+#       with:
+#         token: ${{ secrets.GH_STATS }}
+#     - name: Update README.md
+#       run: |
+#         if [[ "$(git status --porcelain)" != "" ]]; then
+#         git config user.name "Linus Torvalds"
+#         git config user.email torvalds@linux-foundation.org
+#         git add .
+#         git commit -m "Update README"
+#         git push
+#         fi
